--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mikhama/core-js-101.git"
+  },
+  "dependencies": {
+    "typescript": "^5.1.3"
   }
 }
